--- a/portfolio/src/components/Topbar/topbar.css
+++ b/portfolio/src/components/Topbar/topbar.css
@@ -4,6 +4,8 @@
   /* background-color: aliceblue; */
   display: flex;
   justify-content: space-between;
+  background-color: black;
+  border-bottom: 1px solid white;
 }
 .topbarContainerLogo {
   /* background-color: rgb(115, 0, 128); */
@@ -17,11 +19,17 @@
   align-items: center;
   cursor: pointer;
 }
+.link{
+  color: inherit;
+  text-decoration: none;
+}
 .topbarContainerLogo p{
   font-weight: bold;
-  color: #0be5d8;
+  color: red;
+  font-family: "RoundedMplus1c-ExtraBold";
   font-size: x-large;
 }
+.topbarContainerLogo
 .topbarContainerLeft {
   display: flex;
   /* background-color: tomato; */
