--- a/portfolio/src/components/Topbar/topbar.css
+++ b/portfolio/src/components/Topbar/topbar.css
@@ -1,44 +1,41 @@
 .topbarContainer {
   width: 100%;
   height: 80px;
-  /* background-color: aliceblue; */
+  background-color: #000000;
   display: flex;
   justify-content: space-between;
-  background-color: black;
-  border-bottom: 1px solid white;
+  /* background-color: black; */
+  border-bottom: 1px solid  #3a3939;
 }
 .topbarContainerLogo {
-  /* background-color: rgb(115, 0, 128); */
   width: 15%;
   height: 50px;
-  /* margin-top: 20px; */
+
   margin-left: 20px;
   padding-left: 10px;
   border-radius: 10px;
-  /* background-color: #bc6c6c; */
+
   align-items: center;
   cursor: pointer;
 }
-.link{
+.link {
   color: inherit;
   text-decoration: none;
 }
-.topbarContainerLogo p{
-  font-weight: bold;
-  color: red;
+.topbarContainerLogo p {
   font-family: "RoundedMplus1c-ExtraBold";
-  font-size: x-large;
+  font-size: 25px;
 }
-.topbarContainerLogo
-.topbarContainerLeft {
-  display: flex;
-  /* background-color: tomato; */
-  width: 60%;
-  height: 60px;
-  margin-top: 10px;
+.topbarContainerLogo {
+  width: max-content;
+  height: max-content;
+
   align-items: center;
-  justify-content: space-around;
-  margin-bottom: 10px;
+}
+.topbarContainerLeft{
+  /* background-color: #fff; */
+  width: 40%;
+  margin-right: 6%;
 }
 .topbarContainerHome,
 .topbarContainerAbout,
@@ -47,12 +44,9 @@
 .topbarContainerBlogs,
 .topbarContainerContact {
   /* background-color: rgb(33, 195, 220); */
-  width: 13%;
-  height: 40px;
-  margin-top: 20px;
-  margin-left: 5px;
-  margin-right: 5px;
-  margin-bottom: 15px;
+  width: 20%;
+  height: max-content;
+  align-items: center;
   background-color: #262626;
   border-radius: 10px;
   border: none solid rgba(255, 255, 255, 0.107);
@@ -69,17 +63,17 @@
 .topbarContainerWorks:hover {
   background-color: #0be5d8;
 }
-.bungalowname{
-  /* background-color: #883b3b; */
+.bungalowname {
   margin-left: 3px;
-  margin-top: 4px;
-}
-.icon{
-  margin-left: 10px;
-  margin-top: 3px;
 
+  font-family: "Nunito-Regular";
 }
-.iconContacts{
+.icon {
+  margin-top: 3px;
+  /* background-color: #fff; */
+}
+.iconContacts {
   margin-top: 5px;
-  margin-left: 10px;
+
+ 
 }
