--- a/portfolio/src/components/Contact/contact.css
+++ b/portfolio/src/components/Contact/contact.css
@@ -17,6 +17,13 @@
   color: white;
   font-family: "Nunito-ExtraBold";
 }
+@media (max-width: 415px) {
+  .contactText {
+    width: max-content;
+    height: max-content;
+    margin-left: 17%;
+  }
+}
 .hr {
   width: 10%;
   height: 10%;
@@ -31,6 +38,12 @@
   border: none;
   background-color: #0be5d8;
 }
+@media (max-width: 415px) {
+.hr {
+    width: 70px;
+    height: max-content;
+  }
+}
 .contactText p {
   font-size: large;
   font-weight: bold;
@@ -43,13 +56,33 @@
   margin-left: 10%;
   justify-content: space-between;
 }
-.ContactSec1 {
+@media (max-width: 415px) {
+  .ContactSEc1Sec2 {
+    display: flex;
+    flex-direction: column;
+  }
 }
 .ContactSec1Phone {
   width: 265px;
   height: 151px;
   background: #262626;
   border-radius: 20px;
+}
+@media (max-width: 415px) {
+  #Phone,#Email,#Address {
+    width: 250px;
+    height: 150px;
+    font-size: 14px;
+    margin-left: 7%;
+    /* align-items: center; */
+    
+  }
+}
+@media (max-width: 415px) {
+  .ContactSec1 {
+    width: max-content;
+    height: max-content;
+  }
 }
 .phoneIconSec,
 .EmailIconSec {
@@ -106,21 +139,42 @@
   height: 80vh;
   left: 473px;
   top: 214px;
-
+  /* background-color: #debfbf; */
   border: 1.5px solid #3a3939;
   filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
   border-radius: 20px;
 }
+@media (max-width: 415px) {
+  .ContactSec2 {
+    width: 300px;
+    margin-top: 20px;
+    
+  }
+}
 .myDescription {
-  width: fit-content;
+  /* width: fit-content; */
   height: fit-content;
   /* background-color: tomato; */
   margin-left: 5%;
+  width: 100%;
+  font-size: 10px;
+}
+@media (max-width: 415px) {
+  #Description {
+    width: 280px;
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 415px) {
+  .myDescription {
+    width: 280px;
+  }
 }
 .myDescription p {
   width: 527px;
   font-style: normal;
-  font-weight: 300;
+
   font-size: 25px;
   line-height: 34px;
   font-family: "Nunito-ExtraLight";
@@ -128,6 +182,11 @@
 }
 .inputName {
   margin-left: 5%;
+}
+@media (max-width: 415px) {
+  .inputName {
+    width: 300px;
+  }
 }
 .inputName input {
   width: 527px;
@@ -145,6 +204,21 @@
   border: none solid rgba(255, 255, 255, 0.107);
   cursor: pointer;
 }
+@media (max-width: 415px) {
+  .inputName input {
+    width: 260px;
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+@media (max-width: 415px) {
+  #EmailInput,#Message {
+    width: 260px;
+    font-size: 15px;
+    line-height: 20px;
+  }
+}
+
 ::placeholder {
   padding-left: 10px;
   font-family: "Nunito-ExtraLight";
@@ -175,11 +249,19 @@
   margin-top: 30px;
   margin-left: 5%;
 }
+@media (max-width: 415px) {
+  .Submitbutton {
+    width:180%;
+    font-size: 15px;
+   margin-bottom: 25px;
+  
+  }
+}
 
 .Submitbutton button {
   height: 45px;
   width: 20%;
-  border-radius: 25px;
+  border-radius: 10px;
   border: none;
   background-color: #fff;
   cursor: pointer;
@@ -189,6 +271,14 @@
   cursor: pointer;
   font-size: 15px;
   font-family: "Nunito-Regular";
+}
+@media (max-width: 415px) {
+  .Submitbutton button{
+    width:20%;
+    font-size: 15px;
+   margin-bottom: 25px;
+  border-radius: 10px;
+  }
 }
 .button:hover {
   background-color: #0be5d8;
